--- a/css/main.css
+++ b/css/main.css
@@ -802,12 +802,12 @@ img {
     background-position: center;
   }
   .first__title {
-    margin-bottom: 15px;
+    margin-bottom: 24px;
     width: 573px;
     font-weight: 700;
     font-size: 56px;
     line-height: 56px;
-    letter-spacing: -0.5px;
+    letter-spacing: -2.5px;
     color: #FFFFFF;
     margin-right: auto;
     margin-left: auto;
@@ -829,7 +829,17 @@ img {
     margin-left: auto;
   }
   .first__text::after {
-    display: none;
+    position: absolute;
+    top: 186px;
+    left: -222px;
+    content: '';
+    display: block;
+    width: 447px;
+    height: 138px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    overflow: hidden;
   }
   .first__text::before {
     display: none;
@@ -843,11 +853,11 @@ img {
     color: #FFFFFF;
     cursor: pointer;
     font-weight: 700;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 15px;
+    line-height: 25px;
     color: #FFFFFF;
-    padding: 10px 30px;
-    margin-top: 15px;
+    padding: 14px 39px;
+    margin-top: 32px;
     margin-left: 0px;
     display: block;
     margin-right: auto;
@@ -863,6 +873,415 @@ img {
     margin-right: auto;
     margin-left: auto;
     padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+  }
+  .first__title {
+    margin-bottom: 20px;
+    width: 422px;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 50px;
+    letter-spacing: -2.5px;
+    color: #FFFFFF;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 0;
+    width: 422px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__text::after {
+    position: absolute;
+    top: 186px;
+    left: -222px;
+    content: '';
+    display: block;
+    width: 447px;
+    height: 138px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    overflow: hidden;
+  }
+  .first__text::before {
+    display: none;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    padding: 14px 39px;
+    margin-top: 32px;
+    margin-left: 0px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+  .first__wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+  }
+  .first__title {
+    margin-bottom: 20px;
+    width: 311px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: -1.79px;
+    color: #FFFFFF;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 0;
+    width: 311px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__text::after {
+    position: absolute;
+    top: 186px;
+    left: -340px;
+    content: '';
+    display: block;
+    width: 447px;
+    height: 138px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    overflow: hidden;
+  }
+  .first__text::before {
+    display: none;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    padding: 14px 39px;
+    margin-top: 34px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+  .first__wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  .first__section {
+    width: 100%;
+    height: 650px;
+    background-image: url(.././image/first__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+  }
+  .first__title {
+    margin-bottom: 20px;
+    width: 290px;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 35px;
+    letter-spacing: -1.79px;
+    color: #FFFFFF;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+  }
+  .first__text {
+    position: relative;
+    margin-left: 0;
+    width: 290px;
+    font-family: 'Lexend Deca';
+    font-size: 14px;
+    line-height: 22px;
+    color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__text::after {
+    position: absolute;
+    top: 186px;
+    left: -340px;
+    content: '';
+    display: block;
+    width: 447px;
+    height: 138px;
+    background-image: url(.././image/arrow-left.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    overflow: hidden;
+  }
+  .first__text::before {
+    display: none;
+  }
+  .first__btn {
+    background-color: #FCB72B;
+    border: none;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    padding: 12px 37px;
+    margin-top: 34px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .first__btn:hover {
+    background-color: transparent;
+    border: 3px solid #FCB72B;
+    color: #FCB72B;
+    padding: 11px 36px;
+  }
+  .first__wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 0;
+  }
+}
+
+.second__section {
+  margin-top: -100px;
+  padding: 0;
+}
+
+.second__item {
+  width: 350px;
+}
+
+.second__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 160px;
+  position: relative;
+}
+
+.second__list::before {
+  position: absolute;
+  top: 45px;
+  right: 260px;
+  z-index: -1;
+  content: '';
+  width: 974px;
+  height: 15px;
+  background-image: url(.././image/second__section-line.png);
+}
+
+.second__item ~ .second__item {
+  margin-left: 30px;
+}
+
+.second__item-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #495567;
+}
+
+.second__item__text {
+  font-family: 'Lexend Deca';
+  font-size: 15px;
+  line-height: 25px;
+  color: #939CAA;
+}
+
+@media only screen and (max-width: 890px) {
+  .second__item {
+    width: 300px;
+  }
+  .second__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 160px;
+    position: relative;
+  }
+  .second__list::before {
+    position: absolute;
+    top: 45px;
+    right: 164px;
+    z-index: -1;
+    content: '';
+    width: 691px;
+    height: 15px;
+  }
+  .second__item ~ .second__item {
+    margin-left: 30px;
+  }
+  .second__item-title {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 22px;
+  }
+  .second__item__text {
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 22px;
+    color: #939CAA;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .second__item {
+    width: 573px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-left {
+    margin-left: 79px;
+  }
+  .second__list {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-top: 149px;
+  }
+  .second__wrapper {
+    position: relative;
+  }
+  .second__list::before {
+    display: none;
+  }
+  .second__item-title::before {
+    position: absolute;
+    top: -50px;
+    right: 595px;
+    z-index: -1;
+    content: '';
+    width: 15px;
+    height: 512px;
+    background-image: url(.././image/second__section-line2.png);
+  }
+  .second__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .second__item ~ .second__item {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .second__item-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 27px;
+    margin-top: 40px;
+    text-align: left;
+  }
+  .second__item__text {
+    width: 398px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    line-height: 25px;
+    color: #939CAA;
+    text-align: left;
+  }
+  .second__section {
+    margin-top: -100px;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .second__item-title::before {
+    display: none;
   }
 }
 
@@ -889,6 +1308,10 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .second__item ~ .second__item {
+    margin-right: auto;
+    margin-left: auto;
   }
   .second__item-title {
     font-weight: 700;
